--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "firebase": "^11.2.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
