--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
-    "firebase": "^11.2.0"
+    "firebase": "^11.2.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
