--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
     "firebase": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
