--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tap-backend",
   "version": "1.0.0",
   "description": "backend for tap",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
