--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.740.0",
+    "@aws-sdk/client-ses": "^3.787.0",
     "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
