--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/client-ses": "^3.787.0",
     "@aws-sdk/s3-request-presigner": "^3.740.0",
-    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,7 +23,7 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
-    "firebase": "^11.2.0",
+    "firebase": "^11.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
@@ -34,9 +33,11 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^22.12.0",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.14.1",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
