--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "declarationMap": true,
     "declarationDir": "./dist",
     "outDir": "./dist",
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
