--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "backend for tap",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "clean": "rm -rf ./dist && find . -type f \\( -name \".js\" -o -name \".js.map\" -o -name \".d.ts\" \\) ! -path \"./node_modules/*\" -delete",
-    "build": "npm run clean && npm i && tsc",
-    "start": "node dist/index.js"
+  "dev": "ts-node-dev src/index.ts",
+  "clean": "rimraf ./dist",
+  "build": "npm run clean && tsc",
+  "start": "node dist/index.js"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
